--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion '30.0.3'
 
     defaultConfig {
-        applicationId "com.physiolab.santemulti"
-        minSdkVersion 17
+        applicationId "com.physiolab.sante.santemulti"
+        minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -45,6 +45,9 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     //sdp
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
+    //openCSV
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
