--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,17 +5,34 @@
     <application
         android:name="com.physiolab.sante.SanteApp"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_icon"
         android:label="@string/app_name"
         android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MeasureOneActivity"/>
-        <activity android:name="com.physiolab.sante.PopupActivity" />
-        <activity android:name="com.physiolab.sante.PopupTimeActivity" />
-        <activity android:name=".MeasureActivity" />
-        <activity android:name=".MainActivity" >
+        <activity android:name=".MeasureOneActivity"
+            android:launchMode="standard"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustResize|adjustPan|stateAlwaysHidden"
+            />
+        <activity android:name="com.physiolab.sante.PopupActivity"
+            android:launchMode="standard"
+            android:screenOrientation="landscape"
+            />
+        <activity android:name="com.physiolab.sante.PopupTimeActivity"
+            android:launchMode="standard"
+            android:screenOrientation="landscape"
+            />
+        <activity android:name=".MeasureActivity"
+            android:launchMode="standard"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustResize|adjustPan|stateAlwaysHidden"
+            />
+        <activity android:name=".MainActivity"
+            android:launchMode="standard"
+            android:screenOrientation="landscape"
+            >
 
             <!--<intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,7 +40,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>-->
         </activity>
-        <activity android:name=".MainTestActivity">
+        <activity android:name=".MainTestActivity"
+            android:launchMode="standard"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustResize|adjustPan|stateAlwaysHidden"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
