--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".ScanActivity"></activity>
-        <activity android:name=".SelectActivity">
+        <activity android:name=".SelectActivity"
+            android:theme="@style/AppTheme2"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
