--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,8 +11,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ScanActivity"></activity>
+        <activity android:name=".ScanActivity"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustResize|adjustPan|stateAlwaysHidden"
+            />
         <activity android:name=".SelectActivity"
+            android:screenOrientation="landscape"
+            android:windowSoftInputMode="adjustResize|adjustPan|stateAlwaysHidden"
             android:theme="@style/AppTheme2"
             >
             <intent-filter>
