--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 29
     buildToolsVersion '29.0.3'
 
     defaultConfig {
-        applicationId "com.physiolab.sante.santemulti"
+        applicationId "com.I_Mosion_Lab.sante.santemulti"
         minSdkVersion 21
-        targetSdkVersion 31
+        targetSdkVersion 29
         versionCode 2
         versionName "1.1"
         multiDexEnabled true
@@ -34,10 +34,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     //머테리얼
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.3.0'
+
+    implementation 'androidx.appcompat:appcompat:1.3.1'
+
+    /*implementation 'com.google.android.material:material:1.5.0'
+
+    implementation 'androidx.appcompat:appcompat:1.4.1'*/
     // 리사이클러뷰
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     //sdp
@@ -51,5 +57,6 @@ dependencies {
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    /*androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'*/
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
